kuber/pods.yaml
# ---
# apiVersion: v1
# kind: Pod
# metadata:
#   name: testapp
#   namespace: apps-ns
# spec:
#   containers:
#     - name: testapp1
#       image: cr.yandex/crptsn6m55qajbkecilc/app:latest
#   imagePullSecrets:
#     - name: cr.ya.pull

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp
  namespace: apps-ns
  labels:
    app: apps-ns
spec:
  selector:
    matchLabels:
      app: testapp
  replicas: 2
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
        - name: testapp
          image: cr.yandex/crptsn6m55qajbkecilc/app:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 80
            protocol: TCP
      imagePullSecrets:
      - name: cr.ya.pull

---
apiVersion: v1
kind: Service
metadata:
  name: appservice
  namespace: apps-ns
spec:
  selector:
    app: testapp
  ports:
    - name: web-app
      protocol: TCP
      port: 80
      nodePort: 32000
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: appservice2
  namespace: apps-ns
spec:
  selector:
    app: testapp
  ports:
    - name: web-app
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
