kuber/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: test-ingress1
#   namespace: apps-ns
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: "demo.apps"
#     http:
#       paths:
#         - pathType: Prefix
#           path: "/v1"
#           backend:
#             service:
#               name: appservice
#               port:
#                 number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: apps-ns
spec:
#  ingressClassName: nginx
  rules:
  - host: demo.ru
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: appservice2
              port:
                name: web-app
